# BandTL

./: .gitignore  README.md  package-lock.json  package.json
astrobox-plugin/: Cargo.toml  manifest.json
astrobox-plugin/src/: lib.rs  logger.rs  ui.rs
sign/: certificate.pem  private.pem.pk8
src/: app.ux  manifest.json
src/common/: dict.json
src/common/components/InputMethod/: InputMethod.ux
src/common/components/InputMethod/assets/: dicUtil.js
src/common/scripts/: dict.js
src/i18n/: zh-CN.json
src/pages/confirm/: confirm.ux
src/pages/create/: create.ux
src/pages/detail/: detail.ux
src/pages/import/: import.ux
src/pages/index/: index.ux
src/pages/manage/: manage.ux
